# course4

./: .env  data_groups.json  pyproject.toml
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_is_active.py
clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  clients_list.html
config/: settings.py  urls.py
letter/: forms.py  models.py  urls.py  views.py
letter/migrations/: 0001_initial.py  0002_alter_letter_topic_letter.py
letter/templates/letter/: letter_confirm_delete.html  letter_detail.html  letter_form.html  letter_list.html
mailing/: forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_mailing_name_mailing.py  0003_alter_mailing_options_alter_mailing_clients_and_more.py  0004_attempt_client.py  0005_attempt_is_active.py
mailing/templates/mailing/: attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_is_active.py  0003_alter_customuser_options.py
users/templates/users/: base.html  contacts.html  customuser_detail.html  customuser_form.html  customusers_list.html  home.html  login.html  logout.html  register.html
users/templates/users/includes/: footer.html  inc_menu.html
